2008-06-27  Neal H. Walfield  <neal@gnu.org>

	* ruth.c (main): Update to use activity_info instead of
	activity_stats.

2008-06-20  Neal H. Walfield  <neal@gnu.org>

	* ruth.c (visit): When encountering a folio, return -1
	immediately.

2008-06-16  Neal H. Walfield  <neal@gnu.org>

	* ruth.c (main): Improve mmap test.  Update use of
	anonymous_pager_alloc to be consistent with new API.  Update fill
	functions to be consistent with new API.  Remove redundant test.

2008-06-05  Neal H. Walfield  <neal@gnu.org>

	* ruth.c (main): Replace use of slot_lookup with as_cap_lookup.
	Replace use of as_slot_ensure with as_ensure_use.  Replace use of
	slot_lookup with as_slot_lookup_use.

2008-05-29  Thomas Schwinge  <tschwinge@gnu.org>

	* Makefile.am [ENABLE_TESTS]: Don't build package's program.
	
2008-05-28  Neal H. Walfield  <neal@gnu.org>

	* ruth.c (main): Update use of slot_lookup to be consistent with
	new API.

2008-05-24  Neal H. Walfield  <neal@gnu.org>

	* ruth.c (main): Update user of rm_activity_stats to be consistent
	with new interface.

2008-03-01  Neal H. Walfield  <neal@gnu.org>

	* ruth.c Include <signal.h>.
	(main): Test signal signal implementation.

2008-02-21  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (COMMON_CPPFLAGS): Remove variable.
	(ruth_CPPFLAGS): Set to $(USER_CPPFLAGS).
	(ruth_CFLAGS): New variable.
	(ruth_LDFLAGS): Set to $(USER_LDFLAGS).
	(ruth_LDADD): Set to $(USER_LDADD).

2008-02-20  Neal H. Walfield  <neal@gnu.org>

	* ruth.c: Include <hurd/anonymous.h>, <stdlib.h> and <l4.h>.
	(main): Add tests to check rendered regions and discardable pages.

2008-02-13  Neal H. Walfield  <neal@gnu.org>

	* ruth.c (main): Update use of storage_alloc to be consistent with
	new API.

2008-02-11  Neal H. Walfield  <neal@gnu.org>

	* ruth.c (program_name): Change type to char *.

2008-02-11  Neal H. Walfield  <neal@gnu.org>

	* ruth.c (main): When checking the ability to get and set an